[package]
edition = "2021"
name = "node-html5ever"
version = "0.0.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.0", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"
node-html5ever-derive = { path = "../crates/macros" }
fallible-iterator = "0.2.0"
regex = "1.5.4"
paste = "1.0.9"
indexmap = "1.9.1"
itertools = "0.10.5"
lazy_static = "1.4.0"

html5ever = "0.26.0"
selectors = "0.23.0"
# use cssparser that selectrs use
cssparser = "0.28.0"

shared = { path = "../crates/shared" }
css-case = { path = "../crates/css-case" }

[build-dependencies]
napi-build = "2.0.1"
